# Place_recognization

./: CMakeLists.txt  extract_segments.cpp  extract_segments.h  main.cpp  projection.cpp
include/: deductpoints.h  extract_segments.h  globalfeature.h  pcl_utils.h  pointsregistration.h  projection.h  spatial_calculation.h
project_imgs/: DepthOrderMat.tiff  RangMat.tiff  ScanContextMat.tiff  SpatialAreaMat.tiff
python-img_gist_feature/: _test_get_cossim.py  _test_get_gist.py  drawpose.py  lcdviewer.py  view_oneframe.py
python-img_gist_feature/img_gist_feature/: util__img.py
src/: deductpoints.cpp  extract_segments.cpp  globalfeature.cpp  pointsregistration.cpp  projection.cpp  spatial_calculation.cpp
